--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "jose": "^5.2.4",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
