feat: db connection mysql prisma

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=admin
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL = "postgresql://nikolas:uCzT3F6tVAF-CrPLmR6bdA@ringsaker-9697.7tc.aws-eu-central-1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full"
